バリデーションメッセージの項目の日本語化

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -7,3 +7,13 @@ ja:
         postal_code: 郵便番号
         address: 住所
         address_name: 宛名
+        
+      genre:
+        name: ジャンル名
+      
+      item:
+        image: 商品画像
+        name: 商品名
+        text: 商品説明文
+        genre_id: ジャンル
+        non_taxed_price: 税抜価格
